created the add-task bar and its styles and script

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-do List</title>
     <link rel="stylesheet" href="Styles/styles.css">
-    <script src="Scripts/script.js"></script>
+    
 </head>
 <body>
+    
     <div class="nav-bar">
         <div class="nav-btn">Home</div>
         <div class="nav-btn">All Tasks</div>
@@ -27,4 +28,8 @@
             <h2>Past Due</h2>
         </div>
     </div>
+    <button class="create">
+        <p>+ Create Task</p>
+    </button>
+    <script src="Script/index.js"></script>
 </body>
